Fixed icon alignment.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -67,7 +67,7 @@ p {
 .media-container {
   display: none;
   position: absolute;
-  left: 48%
+  left: 49%
 }
 
 .animation-left {
@@ -106,7 +106,7 @@ p {
         left: -100px;
     }
     100% {
-        left 48%;
+        left 49%;
     }
 }
 .animation-right {
@@ -122,7 +122,7 @@ p {
         left: 103%;
     }
     100% {
-        left: 48%;
+        left: 49%;
     }
 }
 
